Sign Here Please/objects/Quote__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Terms__c</fullName>
        <label>Agreement Terms</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <summarizedField>Quote_Line_Item__c.Weekly_Rate__c</summarizedField>
        <summaryForeignKey>Quote_Line_Item__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emblem__c</fullName>
        <label>Emblem</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Pricing_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF(CONTAINS(Owner:User.UserRole.Name, &apos;1&apos;), &apos;1&apos;, &apos;2&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Welcome_Email_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Send Welcome Email to</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Address__c</fullName>
        <label>Service Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_City__c</fullName>
        <label>Service City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_State__c</fullName>
        <label>Service State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Zip__c</fullName>
        <label>Service Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signor__c</fullName>
        <label>Signor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uniforms_per_Employee__c</fullName>
        <label>Uniforms per Employee</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>q-{0}</displayFormat>
        <label>Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>